103
- Switch from PulseAudio to ALSA

102
- Update to 0.15.0

101
- Add streaming from Kodi
- Keep daemon state
- Rework settings

100
- Initial addon