@@ -3,7 +3,7 @@
 
 PKG_NAME="snapserver"
 PKG_VERSION="0.15.0"
-PKG_REV="102a"
+PKG_REV="102c"
 PKG_ARCH="any"
 PKG_LICENSE="GPLv3"
 PKG_DEPENDS_TARGET="toolchain shairport-sync snapcast"
