@@ -1,9 +1,13 @@
 <?xml version="1.0" encoding="utf-8" standalone="yes"?>
 <settings>
   <category  label="30000">
-    <setting label="30001" type="number" id="ss_sp" default="1704"/>
-    <setting label="30002" type="number" id="ss_cp" default="1705"/>
-    <setting label="30003" type="slider" id="ss_ni" default="0" range="-20,1,19" option="int"/>
-    <setting label="30004" type="select" id="ss_st" values="AirPlay|Default|Kodi|Spotify"/>
+    <setting label="30001" type="lsep" />
+    <setting label="30002" type="select" id="ss_st" values="AirPlay|Default|Kodi|Spotify" />
+    <setting label="30003" type="bool"   id="ss_mu" default="false" />
+    <setting label="30004" type="slider" id="ss_pc" default="100" range="0,5,100" option="int"/>
+    <setting label="30005" type="lsep" />
+    <setting label="30006" type="number" id="ss_sp" default="1704"/>
+    <setting label="30007" type="number" id="ss_cp" default="1705"/>
+    <setting label="30008" type="slider" id="ss_ni" default="0" range="-20,1,19" option="int"/>
   </category>
 </settings>
